[project]
name = "pyqmc"
dynamic = ["version", "description"]
authors = [
    {name = "Lucas Wagner",email = "lkwagner@illinois.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy (>=1.10.0,<2.0.0)",
    "pyscf (>=2.8.0,<3.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
